--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@shopify/react-native-skia": "^2.0.5",
     "expo": "^53.0.12",
     "expo-status-bar": "~2.2.3",
+    "moti": "^0.30.0",
     "nativewind": "latest",
     "react": "19.0.0",
     "react-native": "0.79.4",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0"
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-svg": "15.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
