add bottom navigation components and integrate icon variations; update app configuration for new dependencies

--- a/app.json
+++ b/app.json
@@ -12,7 +12,16 @@
       "tsconfigPaths": true
     },
 
-    "plugins": [],
+    "plugins": [
+      [
+        "expo-font",
+        {
+          "fonts": [
+            "./node_modules/@react-native-vector-icons/ionicons/fonts/Ionicons.ttf"
+          ]
+        }
+      ]
+    ],
 
     "orientation": "portrait",
     "icon": "./assets/icon.png",
