--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-vector-icons/ionicons": "^12.0.1",
     "@shopify/react-native-skia": "^2.0.5",
     "expo": "^53.0.12",
     "expo-status-bar": "~2.2.3",
+    "lucide-react-native": "^0.518.0",
     "moti": "^0.30.0",
     "nativewind": "latest",
     "react": "19.0.0",
